k8s/course.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
  namespace: select-course
  labels:
    app: course-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: course-service
  template:
    metadata:
      name: course-service
      labels:
        app: course-service
        version: "${BUILD_NUMBER}-${GIT_COMMIT}"  # 添加版本标签
    spec:
      containers:
        - name: course-service
          image: swr.cn-north-4.myhuaweicloud.com/bbz/select-course:${BUILD_NUMBER}-${GIT_COMMIT}
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh", "-c", "export BASE_HOST=`hostname -i` && ./services/course/CourseService" ]
          ports:
            - name: grpc-10001
              containerPort: 10001
              protocol: TCP
          volumeMounts:
            - name: config-env
              mountPath: /project/.env
              subPath: .env
            - name: project-logs-volume
              mountPath: /project/logs
      imagePullSecrets:
        - name: harborsecret
      volumes:
        - name: config-env
          configMap:
            name: config-env
            items:
              - key: .env
                path: .env
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
