k8s/user.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: select-course
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
        version: "BUILD_HASH"
    spec:
      containers:
        - name: user-service
          image: swr.cn-north-4.myhuaweicloud.com/bbz/select-course:latest
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh", "-c", "export BASE_HOST=`hostname -i` && ./services/user/UserService" ]
          ports:
            - name: grpc-10000
              containerPort: 10000
              protocol: TCP
          volumeMounts:
            - name: config-env
              mountPath: /project/.env
              subPath: .env
            - name: project-logs-volume
              mountPath: /project/logs
      imagePullSecrets:
        - name: harborsecret
      volumes:
        - name: config-env
          configMap:
            name: config-env
            items:
              - key: .env
                path: .env
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
