k8s/gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: select-course
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      name: gateway
      labels:
        app: gateway
        version: "BUILD_HASH"
    spec:
      containers:
        - name: gateway
          image: swr.cn-north-4.myhuaweicloud.com/bbz/select-course:latest
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh", "-c", "export BASE_HOST=`hostname -i` && ./app" ]
          ports:
            - containerPort: 8888
              protocol: TCP
          volumeMounts:
            - name: project-logs-volume
              mountPath: /project/logs
            - name: config-env
              mountPath: /project/.env
              subPath: .env
      imagePullSecrets:
        - name: harborsecret
      volumes:
        - name: project-logs-volume
          hostPath:
            path: /data/select-course/logs
            type: DirectoryOrCreate
        - name: config-env
          configMap:
            name: config-env
            items:
              - key: .env
                path: .env
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  namespace: select-course
spec:
  selector:
    app: gateway
  ports:
    - port: 8888
      targetPort: 8888

#
