k8s/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: select-course
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.kubernetes-devops.cn
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-svc
                port:
                  number: 8888
